Refatoração e reutilização do cssconteiner e css

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     </head>
     <body>
         <!--Header-->
-        <header>
-            <img src="./Assets/images/logo.png" alt="Logo da Empresa xpto">
+        <header class="conteiner">
+            <section class="row">
+                <img src="./Assets/images/logo.png" alt="Logo da Empresa xpto">
         <!--Menu do Site-->
             <nav>
                 <ul>
@@ -44,13 +45,14 @@
                 </ul>
             </nav>
             <!--Fim do menu do Site-->
+            </section>
         </header>
         <!--Fim do Header-->
 
         <!--conteiner-->
-        <main>
+        <main class="conteiner">
             <!--Section conteudo do site-->
-            <section>
+            <section class="row">
                 <!--Conteudo de texto Sobre o Site-->
                 <article>
                 <h1>Web Design</h1>
