Criação do main e arquivo Css para o mesmo

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <!--conteiner-->
         <main class="conteiner">
             <!--Section conteudo do site-->
-            <section class="row">
+            <section class="row sobre-web-design">
                 <!--Conteudo de texto Sobre o Site-->
                 <article>
                 <h1>Web Design</h1>
@@ -68,7 +68,7 @@
         A bruxa era vida e o Lobo o destino.
                 </p>
 
-                <a href="#">Saíba Mais</a>
+                <a href="#" class="btn btn-laranja">Saíba Mais</a>
                 </article>
                 <!--Conteudo de texto Sobre o Site-->
                 <figcaption>
